--- a/htm/index.htm
+++ b/htm/index.htm
@@ -14,6 +14,8 @@
 		<div class="test">
 <div id="out" ></div>
 <div id="vet"></div>
+<div id="out" >1</div>
+<div id="vet">2</div>
 <div id="clickme">
   Click here
 </div>
