--- a/htm/index.htm
+++ b/htm/index.htm
@@ -16,6 +16,8 @@
 <div id="vet"></div>
 <div id="out" >1</div>
 <div id="vet">2</div>
+<div id="out" >1</div>
+<div id="vet">2</div>
 <div id="clickme">
   Click here
 </div>
