--- a/htm/index.htm
+++ b/htm/index.htm
@@ -18,6 +18,12 @@
 <div id="vet">2</div>
 <div id="out" >1</div>
 <div id="vet">2</div>
+<div id="out" ></div>
+<div id="vet"></div>
+<div id="out" >1</div>
+<div id="vet">2</div>
+<div id="out" >1</div>
+<div id="vet">2</div>
 <div id="clickme">
   Click here
 </div>
